[gd_scene load_steps=8 format=3 uid="uid://cnagm0ae3yv72"]

[ext_resource type="Script" path="res://src/scene/editor/markdown_edit.gd" id="1_747k5"]
[ext_resource type="Script" path="res://src/scene/canvas/doc_canvas.gd" id="2_ppuf1"]
[ext_resource type="Script" path="res://src/scene/editor/debug_edit.gd" id="3_qbf4f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tqggp"]

[sub_resource type="Theme" id="Theme_wx15x"]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/decrement_pressed = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/icons/increment_pressed = null
HScrollBar/styles/grabber = SubResource("StyleBoxEmpty_tqggp")
HScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_tqggp")
HScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_tqggp")
HScrollBar/styles/scroll = SubResource("StyleBoxEmpty_tqggp")
HScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_tqggp")
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/decrement_pressed = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/icons/increment_pressed = null
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_tqggp")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_tqggp")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_tqggp")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_tqggp")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_tqggp")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7m7v"]
content_margin_left = 8.0
content_margin_top = 4.0
bg_color = Color(1, 0.991272, 0.898438, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_708mh"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.925781, 0.718125, 0.39418, 1)

[node name="MarkdownEdit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_747k5")
show_debug = false
metadata/_edit_lock_ = true

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = -260

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CanvasContainer" type="Control" parent="HSplitContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DocumentCanvas" type="Control" parent="HSplitContainer/HBoxContainer/CanvasContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 1000.0
grow_horizontal = 2
script = ExtResource("2_ppuf1")

[node name="ReferenceRect" type="ReferenceRect" parent="HSplitContainer/HBoxContainer/CanvasContainer/DocumentCanvas"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
border_width = 2.0
editor_only = false

[node name="TextEdit" type="TextEdit" parent="HSplitContainer/HBoxContainer/CanvasContainer"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 59.0
offset_top = 33.0
offset_right = 201.0
offset_bottom = 60.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1
theme = SubResource("Theme_wx15x")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(1, 0.998169, 0.882813, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 0.65098)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 0
theme_override_constants/caret_width = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_a7m7v")
theme_override_styles/focus = SubResource("StyleBoxFlat_708mh")
wrap_mode = 1
autowrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="VScrollBar" type="VScrollBar" parent="HSplitContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 100.0
page = 100.0
custom_step = 50.0

[node name="Debug" type="TextEdit" parent="HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
wrap_mode = 1
script = ExtResource("3_qbf4f")

[connection signal="clicked_line" from="HSplitContainer/HBoxContainer/CanvasContainer/DocumentCanvas" to="." method="edit_line"]
[connection signal="clicked_line" from="HSplitContainer/HBoxContainer/CanvasContainer/DocumentCanvas" to="HSplitContainer/Debug" method="show_debug"]
[connection signal="gui_input" from="HSplitContainer/HBoxContainer/CanvasContainer/DocumentCanvas" to="." method="_on_doc_canvas_gui_input"]
[connection signal="height_changed" from="HSplitContainer/HBoxContainer/CanvasContainer/DocumentCanvas" to="." method="_on_doc_canvas_height_changed"]
[connection signal="gui_input" from="HSplitContainer/HBoxContainer/CanvasContainer/TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="visibility_changed" from="HSplitContainer/HBoxContainer/CanvasContainer/TextEdit" to="." method="_on_text_edit_visibility_changed"]
[connection signal="value_changed" from="HSplitContainer/HBoxContainer/VScrollBar" to="." method="_on_v_scroll_bar_value_changed"]
